Comment feature update